Proyect 2/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'inherits'", "'+'", "'-'", 
                     "'*'", "'/'", "'<'", "'<='", "'='", "'@'", "'~'", "'return'", 
                     "'let'", "'in'", "'if'", "'then'", "'else'", "'fi'", 
                     "'while'", "'loop'", "'pool'", "'self'", "'true'", 
                     "'false'", "'v'", "'>'", "'%'", "'^'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Bool'", "'Int'", 
                     "'String'", "'IO'", "'Object'", "'SELF_TYPE'", "'case'", 
                     "'of'", "'esac'", "'new'", "'isvoid'", "'not'", "'<-'", 
                     "'=>'", "';'", "':'", "','", "'.'", "'('", "')'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT_CONST", "STR_CONST", "WS", 
                      "BOOL", "INT", "STRING", "IO", "OBJECT", "SELF_TYPE", 
                      "CASE", "OF", "ESAC", "NEW", "ISVOID", "NOT", "ASSIGN", 
                      "ARROW", "SEMI", "COLON", "COMMA", "DOT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LINE_COMMENT", "COMMENT", 
                      "ErrorChar" ]

    RULE_class = 0
    RULE_inherits = 1
    RULE_type = 2
    RULE_binary_op = 3
    RULE_unary_op = 4
    RULE_program = 5
    RULE_clas_list = 6
    RULE_feature_list = 7
    RULE_feature = 8
    RULE_attribute_definition = 9
    RULE_var_assign = 10
    RULE_method_definition = 11
    RULE_return_statement = 12
    RULE_let_declaration = 13
    RULE_let_binding = 14
    RULE_if_statement = 15
    RULE_while_statement = 16
    RULE_block = 17
    RULE_simple_method_definition = 18
    RULE_formal = 19
    RULE_parameter_list = 20
    RULE_expr = 21

    ruleNames =  [ "class", "inherits", "type", "binary_op", "unary_op", 
                   "program", "clas_list", "feature_list", "feature", "attribute_definition", 
                   "var_assign", "method_definition", "return_statement", 
                   "let_declaration", "let_binding", "if_statement", "while_statement", 
                   "block", "simple_method_definition", "formal", "parameter_list", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    ID=29
    INT_CONST=30
    STR_CONST=31
    WS=32
    BOOL=33
    INT=34
    STRING=35
    IO=36
    OBJECT=37
    SELF_TYPE=38
    CASE=39
    OF=40
    ESAC=41
    NEW=42
    ISVOID=43
    NOT=44
    ASSIGN=45
    ARROW=46
    SEMI=47
    COLON=48
    COMMA=49
    DOT=50
    LPAREN=51
    RPAREN=52
    LBRACE=53
    RBRACE=54
    LINE_COMMENT=55
    COMMENT=56
    ErrorChar=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)




    def class_(self):

        localctx = YAPLParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(YAPLParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_inherits

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInherits" ):
                listener.enterInherits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInherits" ):
                listener.exitInherits(self)




    def inherits(self):

        localctx = YAPLParser.InheritsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inherits)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(YAPLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def BOOL(self):
            return self.getToken(YAPLParser.BOOL, 0)

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def IO(self):
            return self.getToken(YAPLParser.IO, 0)

        def OBJECT(self):
            return self.getToken(YAPLParser.OBJECT, 0)

        def SELF_TYPE(self):
            return self.getToken(YAPLParser.SELF_TYPE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = YAPLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 541702750208) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_binary_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_op" ):
                listener.enterBinary_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_op" ):
                listener.exitBinary_op(self)




    def binary_op(self):

        localctx = YAPLParser.Binary_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_binary_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_unary_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_op" ):
                listener.enterUnary_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_op" ):
                listener.exitUnary_op(self)




    def unary_op(self):

        localctx = YAPLParser.Unary_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unary_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not(_la==11 or _la==44):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clas_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Clas_listContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Clas_listContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.clas_list()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Clas_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.TypeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.TypeContext,i)


        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(YAPLParser.SEMI, 0)

        def feature_list(self):
            return self.getTypedRuleContext(YAPLParser.Feature_listContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_clas_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClas_list" ):
                listener.enterClas_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClas_list" ):
                listener.exitClas_list(self)




    def clas_list(self):

        localctx = YAPLParser.Clas_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_clas_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(YAPLParser.T__0)
            self.state = 60
            self.type_()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 61
                self.match(YAPLParser.T__1)
                self.state = 62
                self.type_()


            self.state = 65
            self.match(YAPLParser.LBRACE)

            self.state = 66
            self.feature_list()
            self.state = 67
            self.match(YAPLParser.RBRACE)
            self.state = 68
            self.match(YAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Feature_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature_list" ):
                listener.enterFeature_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature_list" ):
                listener.exitFeature_list(self)




    def feature_list(self):

        localctx = YAPLParser.Feature_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_feature_list)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==29:
                    self.state = 70
                    self.feature()
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==29:
                    self.state = 76
                    self.formal()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_definition(self):
            return self.getTypedRuleContext(YAPLParser.Attribute_definitionContext,0)


        def method_definition(self):
            return self.getTypedRuleContext(YAPLParser.Method_definitionContext,0)


        def simple_method_definition(self):
            return self.getTypedRuleContext(YAPLParser.Simple_method_definitionContext,0)


        def var_assign(self):
            return self.getTypedRuleContext(YAPLParser.Var_assignContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_feature)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.attribute_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.method_definition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.simple_method_definition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.var_assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPLParser.TypeContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMI)
            else:
                return self.getToken(YAPLParser.SEMI, i)

        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_attribute_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_definition" ):
                listener.enterAttribute_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_definition" ):
                listener.exitAttribute_definition(self)




    def attribute_definition(self):

        localctx = YAPLParser.Attribute_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attribute_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(YAPLParser.ID)
            self.state = 91
            self.match(YAPLParser.COLON)
            self.state = 92
            self.type_()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 93
                self.match(YAPLParser.ASSIGN)
                self.state = 94
                self.expr(0)


            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 97
                self.match(YAPLParser.LPAREN)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(YAPLParser.SEMI)
                self.state = 100
                self.match(YAPLParser.RPAREN)


            self.state = 104
            self.match(YAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)

        def SEMI(self):
            return self.getToken(YAPLParser.SEMI, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def simple_method_definition(self):
            return self.getTypedRuleContext(YAPLParser.Simple_method_definitionContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)




    def var_assign(self):

        localctx = YAPLParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(YAPLParser.ID)
            self.state = 107
            self.match(YAPLParser.ASSIGN)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 108
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 109
                self.simple_method_definition()
                pass


            self.state = 112
            self.match(YAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPLParser.TypeContext,0)


        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def return_statement(self):
            return self.getTypedRuleContext(YAPLParser.Return_statementContext,0)


        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(YAPLParser.SEMI, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(YAPLParser.Parameter_listContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.BlockContext)
            else:
                return self.getTypedRuleContext(YAPLParser.BlockContext,i)


        def method_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Method_definitionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Method_definitionContext,i)


        def simple_method_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Simple_method_definitionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Simple_method_definitionContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_method_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_definition" ):
                listener.enterMethod_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_definition" ):
                listener.exitMethod_definition(self)




    def method_definition(self):

        localctx = YAPLParser.Method_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_method_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(YAPLParser.ID)
            self.state = 115
            self.match(YAPLParser.LPAREN)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 116
                self.parameter_list()


            self.state = 119
            self.match(YAPLParser.RPAREN)
            self.state = 120
            self.match(YAPLParser.COLON)
            self.state = 121
            self.type_()
            self.state = 122
            self.match(YAPLParser.LBRACE)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537436160) != 0):
                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 123
                    self.block()
                    pass

                elif la_ == 2:
                    self.state = 124
                    self.method_definition()
                    pass

                elif la_ == 3:
                    self.state = 125
                    self.simple_method_definition()
                    pass


                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.return_statement()
            self.state = 132
            self.match(YAPLParser.RBRACE)
            self.state = 133
            self.match(YAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(YAPLParser.SEMI, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)




    def return_statement(self):

        localctx = YAPLParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(YAPLParser.T__11)
            self.state = 136
            self.expr(0)
            self.state = 137
            self.match(YAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Let_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def let_binding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Let_bindingContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Let_bindingContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMI)
            else:
                return self.getToken(YAPLParser.SEMI, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_let_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_declaration" ):
                listener.enterLet_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_declaration" ):
                listener.exitLet_declaration(self)




    def let_declaration(self):

        localctx = YAPLParser.Let_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_let_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(YAPLParser.T__12)
            self.state = 140
            self.let_binding()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==49:
                self.state = 141
                self.match(YAPLParser.COMMA)
                self.state = 142
                self.let_binding()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 148
                self.match(YAPLParser.T__13)
                self.state = 149
                self.match(YAPLParser.LBRACE)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2282589960273920) != 0):
                    self.state = 150
                    self.expr(0)
                    self.state = 151
                    self.match(YAPLParser.SEMI)
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 158
                self.match(YAPLParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Let_bindingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
